Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-12829

Error in dynamic menu of MSPAINT

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 0.4.5
    • Applications
    • None

    Description

      In the File menu, you can see the list of the last four files used. Ok.

      Now, open the "View / Zoom / User defined" menu, the dynamic entries will be appended also here.

      Tested on Windows XP, see attached screenshots.

      Attachments

        Activity

          People

            gyROS Benedikt Freisen
            Carlo Bramix Carlo Bramix
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: