[MSPAINT] - fix error in dynamic menu: most recently used files were showing up in zoom menu, too CORE-12829 #resolve

svn path=/trunk/; revision=73903